update the main and header to use correct spacing

--- a/teepee/src/styles/components/_header.scss
+++ b/teepee/src/styles/components/_header.scss
@@ -1,6 +1,4 @@
 header {
-  $header-height: 90px;
-
   background-color: transparentize($dark-grey, .05);
   border-bottom: 1px solid transparentize($white, .3);
   height: $header-height;
